[package]
name = "embedded-bktree"
version = "0.1.0"
edition = "2021"

[features]
# default = ["read", "alloc"]
default = ["alloc", "test"]
test = ["read", "write"]
read = ["alloc"]
write = ["std", "levenshtein"]
alloc = []
std = []

[dependencies]
levenshtein = { version = "1.0.5", optional = true }
